# scales

./: Cargo.toml  LICENSE.md
src/: config.rs  config.yml  main.rs  utils.rs
src/commands/: add.rs  init.rs  install.rs  mod.rs  show.rs
