[package]
name = "scales"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.4", features = ["yaml"]}
regex = "1.5.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
ureq = "2.2.0"
