[package]
name = "scales"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.4", features = ["yaml"]}
colored = "2.0.0"
file-lock = "1.1.20"
flate2 = "1.0.22"
futures = "0.3.17"
regex = "1.5.4"
reqwest = "0.11.5"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tar = "0.4.37"
tokio = { version = "1.12.0", features = ["full"] }
ureq = "2.2.0"
